Fix breadcrumb overflow on small screens

--- a/docs/theme/assets/css/main.css
+++ b/docs/theme/assets/css/main.css
@@ -641,7 +641,7 @@ pre code { padding: 0; font-size: 100%; background-color: transparent; }
 .tsd-page-title h1 { margin: 0; }
 
 
-.tsd-breadcrumb { width: 90%; margin: 0; padding: 0; color: #808080; }
+.tsd-breadcrumb { white-space: normal; width: 80%; margin: 0; padding: 0; color: #808080; }
 .tsd-breadcrumb a { color: #808080; text-decoration: none; }
 .tsd-breadcrumb a:hover { text-decoration: underline; }
 .tsd-breadcrumb li { display: inline; }
@@ -833,7 +833,7 @@ ul.tsd-parameters .tsd-comment, ul.tsd-type-parameters .tsd-comment { margin-top
 .tsd-sources ul, .tsd-sources p { margin: 0 !important; }
 .tsd-sources ul { list-style: none; padding: 0; }
 
-.tsd-page-toolbar { position: fixed; z-index: 1; top: 0; left: 0; width: 100%; height: 40px; color: #333; background: #fff; border-bottom: 1px solid #eee; }
+.tsd-page-toolbar { position: fixed; z-index: 1; top: 0; left: 0; width: 100%; color: #333; background: #fff; border-bottom: 1px solid #eee; }
 .tsd-page-toolbar a { color: #333; text-decoration: none; }
 .tsd-page-toolbar a.title { font-weight: bold; }
 .tsd-page-toolbar a.title:hover { text-decoration: underline; }
